Fix right-side overflow in landing page
Previous fix reverted in fb91da0, but problem still exists in master.

To reproduce:

1. Open landing page.
2. Resize window to be narrower than .container (1240px or less).
3. Observer the extra white space at the right side.

This is caused by the padding-left applied to .sponsor. Limiting
the size of .container fixes the problem.

--- a/src/static/css/main.scss
+++ b/src/static/css/main.scss
@@ -208,6 +208,9 @@ body {
         color: white;
         text-decoration: underline;
     }
+    > .container {
+        max-width: 100%;
+    }
 }
 
 @media (max-width: $screen-md) {
